--- a/index.html
+++ b/index.html
@@ -73,12 +73,14 @@
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-list-item">
-              <!-- <img
+              <div class="box-background box">
+                <!-- <img
               src="./images/img-icon/icon-1.jpg"
               alt="satellite-dish"
               width="264"
               height="112"
             /> -->
+              </div>
               <h3 class="advantages-list-title">Strategy</h3>
               <p class="advantages-list-text">
                 Our goal is to identify the business problem to walk away with
@@ -86,12 +88,14 @@
               </p>
             </li>
             <li class="advantages-list-item">
-              <!-- <img
+              <div class="box-background box">
+                <!-- <img
               src="./images/img-icon/icon-2.jpg"
               alt="time"
               width="264"
               height="112"
             /> -->
+              </div>
               <h3 class="advantages-list-title">Punctuality</h3>
               <p class="advantages-list-text">
                 Bring the key message to the brand's audience for the best price
@@ -99,12 +103,14 @@
               </p>
             </li>
             <li class="advantages-list-item">
-              <!-- <img
+              <div class="box-background box">
+                <!-- <img
               src="./images/img-icon/icon-3.jpg"
               alt="computer"
               width="264"
               height="112"
             /> -->
+              </div>
               <h3 class="advantages-list-title">Diligence</h3>
               <p class="advantages-list-text">
                 Research and confirm brands that present the strongest digital
@@ -112,12 +118,14 @@
               </p>
             </li>
             <li class="advantages-list-item">
-              <!-- <img
+              <div class="box-background box">
+                <!-- <img
               src="./images/img-icon/icon-4.jpg"
               alt="astronaut"
               width="264"
               height="112"
             /> -->
+              </div>
               <h3 class="advantages-list-title">Technologies</h3>
               <p class="advantages-list-text">
                 Design practice focused on digital experiences. We bring forth a
