--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <div class="box-background box-icon">
                 <svg width="64" height="64">
                   <use
-                    href="./images/img-advantages-icon/sprite-icon.svg#icon-strategy"
+                    href="./images/icons.svg/sprite-icon.svg#icon-strategy"
                   ></use>
                 </svg>
               </div>
@@ -90,7 +90,7 @@
               <div class="box-background box-icon">
                 <svg width="64" height="64">
                   <use
-                    href="./images/img-advantages-icon/sprite-icon.svg#icon-punctuality"
+                    href="./images/icons.svg/sprite-icon.svg#icon-punctuality"
                   ></use>
                 </svg>
               </div>
@@ -104,7 +104,7 @@
               <div class="box-background box-icon">
                 <svg width="64" height="64">
                   <use
-                    href="./images/img-advantages-icon/sprite-icon.svg#icon-diligence"
+                    href="./images/icons.svg/sprite-icon.svg#icon-diligence"
                   ></use>
                 </svg>
               </div>
@@ -118,7 +118,7 @@
               <div class="box-background box-icon">
                 <svg width="64" height="64">
                   <use
-                    href="./images/img-advantages-icon/sprite-icon.svg#icon-technologies"
+                    href="./images/icons.svg/sprite-icon.svg#icon-technologies"
                   ></use>
                 </svg>
               </div>
@@ -159,7 +159,7 @@
                   >
                     <svg width="16" height="16">
                       <use
-                        href="./images/social-media-icon/sprite-social.svg#icon-instagram"
+                        href="./images/icons.svg/sprite-social.svg#icon-instagram"
                       ></use>
                     </svg>
                   </a>
@@ -172,7 +172,7 @@
                   >
                     <svg width="16" height="16">
                       <use
-                        href="./images/social-media-icon/sprite-social.svg#icon-twitter"
+                        href="./images/icons.svg/sprite-social.svg#icon-twitter"
                       ></use>
                     </svg>
                   </a>
@@ -185,7 +185,7 @@
                   >
                     <svg width="16" height="16">
                       <use
-                        href="./images/social-media-icon/sprite-social.svg#icon-facebook"
+                        href="./images/icons.svg/sprite-social.svg#icon-facebook"
                       ></use>
                     </svg>
                   </a>
@@ -198,7 +198,7 @@
                   >
                     <svg width="16" height="16">
                       <use
-                        href="./images/social-media-icon/sprite-social.svg#icon-linkedin"
+                        href="./images/icons.svg/sprite-social.svg#icon-linkedin"
                       ></use>
                     </svg>
                   </a>
@@ -226,7 +226,7 @@
                   >
                     <svg width="16" height="16">
                       <use
-                        href="./images/social-media-icon/sprite-social.svg#icon-instagram"
+                        href="./images/icons.svg/sprite-social.svg#icon-instagram"
                       ></use>
                     </svg>
                   </a>
@@ -239,7 +239,7 @@
                   >
                     <svg width="16" height="16">
                       <use
-                        href="./images/social-media-icon/sprite-social.svg#icon-twitter"
+                        href="./images/icons.svg/sprite-social.svg#icon-twitter"
                       ></use>
                     </svg>
                   </a>
@@ -252,7 +252,7 @@
                   >
                     <svg width="16" height="16">
                       <use
-                        href="./images/social-media-icon/sprite-social.svg#icon-facebook"
+                        href="./images/icons.svg/sprite-social.svg#icon-facebook"
                       ></use>
                     </svg>
                   </a>
@@ -265,7 +265,7 @@
                   >
                     <svg width="16" height="16">
                       <use
-                        href="./images/social-media-icon/sprite-social.svg#icon-linkedin"
+                        href="./images/icons.svg/sprite-social.svg#icon-linkedin"
                       ></use>
                     </svg>
                   </a>
@@ -293,7 +293,7 @@
                   >
                     <svg width="16" height="16">
                       <use
-                        href="./images/social-media-icon/sprite-social.svg#icon-instagram"
+                        href="./images/icons.svg/sprite-social.svg#icon-instagram"
                       ></use>
                     </svg>
                   </a>
@@ -306,7 +306,7 @@
                   >
                     <svg width="16" height="16">
                       <use
-                        href="./images/social-media-icon/sprite-social.svg#icon-twitter"
+                        href="./images/icons.svg/sprite-social.svg#icon-twitter"
                       ></use>
                     </svg>
                   </a>
@@ -319,7 +319,7 @@
                   >
                     <svg width="16" height="16">
                       <use
-                        href="./images/social-media-icon/sprite-social.svg#icon-facebook"
+                        href="./images/icons.svg/sprite-social.svg#icon-facebook"
                       ></use>
                     </svg>
                   </a>
@@ -332,7 +332,7 @@
                   >
                     <svg width="16" height="16">
                       <use
-                        href="./images/social-media-icon/sprite-social.svg#icon-linkedin"
+                        href="./images/icons.svg/sprite-social.svg#icon-linkedin"
                       ></use>
                     </svg>
                   </a>
@@ -360,7 +360,7 @@
                   >
                     <svg width="16" height="16">
                       <use
-                        href="./images/social-media-icon/sprite-social.svg#icon-instagram"
+                        href="./images/icons.svg/sprite-social.svg#icon-instagram"
                       ></use>
                     </svg>
                   </a>
@@ -373,7 +373,7 @@
                   >
                     <svg width="16" height="16">
                       <use
-                        href="./images/social-media-icon/sprite-social.svg#icon-twitter"
+                        href="./images/icons.svg/sprite-social.svg#icon-twitter"
                       ></use>
                     </svg>
                   </a>
@@ -386,7 +386,7 @@
                   >
                     <svg width="16" height="16">
                       <use
-                        href="./images/social-media-icon/sprite-social.svg#icon-facebook"
+                        href="./images/icons.svg/sprite-social.svg#icon-facebook"
                       ></use>
                     </svg>
                   </a>
@@ -515,9 +515,9 @@
                 href="https://www.instagram.com/"
                 target="_blank"
               >
-                <svg width="16" height="16">
+                <svg width="24" height="24">
                   <use
-                    href="./images/social-media-icon/sprite-social.svg#icon-instagram"
+                    href="./images/icons.svg/sprite-social.svg#icon-instagram"
                   ></use>
                 </svg>
               </a>
@@ -528,9 +528,9 @@
                 href="https://www.twitter.com/"
                 target="_blank"
               >
-                <svg width="16" height="16">
+                <svg width="24" height="24">
                   <use
-                    href="./images/social-media-icon/sprite-social.svg#icon-twitter"
+                    href="./images/icons.svg/sprite-social.svg#icon-twitter"
                   ></use>
                 </svg>
               </a>
@@ -541,9 +541,9 @@
                 href="https://www.facebook.com/"
                 target="_blank"
               >
-                <svg width="16" height="16">
+                <svg width="24" height="24">
                   <use
-                    href="./images/social-media-icon/sprite-social.svg#icon-facebook"
+                    href="./images/icons.svg/sprite-social.svg#icon-facebook"
                   ></use>
                 </svg>
               </a>
@@ -554,9 +554,9 @@
                 href="https://www.linkedin.com/"
                 target="_blank"
               >
-                <svg width="16" height="16">
+                <svg width="24" height="24">
                   <use
-                    href="./images/social-media-icon/sprite-social.svg#icon-linkedin"
+                    href="./images/icons.svg/sprite-social.svg#icon-linkedin"
                   ></use>
                 </svg>
               </a>
