--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <ul class="advantages-list">
             <li class="advantages-list-item">
               <div class="box-background box-icon">
-                <svg width="64" height="64">
+                <svg class="advantages-icons" width="64" height="64">
                   <use
                     href="./images/icons.svg#icon-antenna"
                   ></use>
@@ -88,7 +88,7 @@
             </li>
             <li class="advantages-list-item">
               <div class="box-background box-icon">
-                <svg width="64" height="64">
+                <svg class="advantages-icons" width="64" height="64">
                   <use
                     href="./images/icons.svg#icon-clock"
                   ></use>
@@ -102,7 +102,7 @@
             </li>
             <li class="advantages-list-item">
               <div class="box-background box-icon">
-                <svg width="64" height="64">
+                <svg class="advantages-icons" width="64" height="64">
                   <use
                     href="./images/icons.svg#icon-diagram"
                   ></use>
@@ -116,7 +116,7 @@
             </li>
             <li class="advantages-list-item">
               <div class="box-background box-icon">
-                <svg width="64" height="64">
+                <svg class="advantages-icons" width="64" height="64">
                   <use
                     href="./images/icons.svg#icon-astronaut"
                   ></use>
@@ -157,7 +157,7 @@
                     href="https://www.instagram.com/"
                     target="_blank"
                   >
-                    <svg width="16" height="16">
+                    <svg class="team-icons" width="16" height="16">
                       <use
                         href="./images/icons.svg#icon-instagram"
                       ></use>
@@ -170,7 +170,7 @@
                     href="https://www.twitter.com/"
                     target="_blank"
                   >
-                    <svg width="16" height="16">
+                    <svg class="team-icons" width="16" height="16">
                       <use
                         href="./images/icons.svg#icon-twitter"
                       ></use>
@@ -183,7 +183,7 @@
                     href="https://www.facebook.com/"
                     target="_blank"
                   >
-                    <svg width="16" height="16">
+                    <svg class="team-icons" width="16" height="16">
                       <use
                         href="./images/icons.svg#icon-facebook"
                       ></use>
@@ -196,7 +196,7 @@
                     href="https://www.linkedin.com/"
                     target="_blank"
                   >
-                    <svg width="16" height="16">
+                    <svg class="team-icons" width="16" height="16">
                       <use
                         href="./images/icons.svg#icon-linkedin"
                       ></use>
@@ -224,7 +224,7 @@
                     href="https://www.instagram.com/"
                     target="_blank"
                   >
-                    <svg width="16" height="16">
+                    <svg class="team-icons" width="16" height="16">
                       <use
                         href="./images/icons.svg#icon-instagram"
                       ></use>
@@ -237,7 +237,7 @@
                     href="https://www.twitter.com/"
                     target="_blank"
                   >
-                    <svg width="16" height="16">
+                    <svg class="team-icons" width="16" height="16">
                       <use
                         href="./images/icons.svg#icon-twitter"
                       ></use>
@@ -250,7 +250,7 @@
                     href="https://www.facebook.com/"
                     target="_blank"
                   >
-                    <svg width="16" height="16">
+                    <svg class="team-icons" width="16" height="16">
                       <use
                         href="./images/icons.svg#icon-facebook"
                       ></use>
@@ -263,7 +263,7 @@
                     href="https://www.linkedin.com/"
                     target="_blank"
                   >
-                    <svg width="16" height="16">
+                    <svg class="team-icons" width="16" height="16">
                       <use
                         href="./images/icons.svg#icon-linkedin"
                       ></use>
@@ -291,7 +291,7 @@
                     href="https://www.instagram.com/"
                     target="_blank"
                   >
-                    <svg width="16" height="16">
+                    <svg class="team-icons" width="16" height="16">
                       <use
                         href="./images/icons.svg#icon-instagram"
                       ></use>
@@ -304,7 +304,7 @@
                     href="https://www.twitter.com/"
                     target="_blank"
                   >
-                    <svg width="16" height="16">
+                    <svg class="team-icons" width="16" height="16">
                       <use
                         href="./images/icons.svg#icon-twitter"
                       ></use>
@@ -317,7 +317,7 @@
                     href="https://www.facebook.com/"
                     target="_blank"
                   >
-                    <svg width="16" height="16">
+                    <svg class="team-icons" width="16" height="16">
                       <use
                         href="./images/icons.svg#icon-facebook"
                       ></use>
@@ -330,7 +330,7 @@
                     href="https://www.linkedin.com/"
                     target="_blank"
                   >
-                    <svg width="16" height="16">
+                    <svg class="team-icons" width="16" height="16">
                       <use
                         href="./images/icons.svg#icon-linkedin"
                       ></use>
@@ -358,7 +358,7 @@
                     href="https://www.instagram.com/"
                     target="_blank"
                   >
-                    <svg width="16" height="16">
+                    <svg class="team-icons" width="16" height="16">
                       <use
                         href="./images/icons.svg#icon-instagram"
                       ></use>
@@ -371,7 +371,7 @@
                     href="https://www.twitter.com/"
                     target="_blank"
                   >
-                    <svg width="16" height="16">
+                    <svg class="team-icons" width="16" height="16">
                       <use
                         href="./images/icons.svg#icon-twitter"
                       ></use>
@@ -384,7 +384,7 @@
                     href="https://www.facebook.com/"
                     target="_blank"
                   >
-                    <svg width="16" height="16">
+                    <svg class="team-icons" width="16" height="16">
                       <use
                         href="./images/icons.svg#icon-facebook"
                       ></use>
@@ -397,7 +397,7 @@
                     href="https://www.linkedin.com/"
                     target="_blank"
                   >
-                    <svg width="16" height="16">
+                    <svg class="team-icons" width="16" height="16">
                       <use
                         href="./images/icons.svg#icon-linkedin"
                       ></use>
@@ -515,7 +515,7 @@
                 href="https://www.instagram.com/"
                 target="_blank"
               >
-                <svg width="24" height="24">
+                <svg class="footer-icons" width="24" height="24">
                   <use
                     href="./images/icons.svg#icon-instagram"
                   ></use>
@@ -528,7 +528,7 @@
                 href="https://www.twitter.com/"
                 target="_blank"
               >
-                <svg width="24" height="24">
+                <svg class="footer-icons" width="24" height="24">
                   <use
                     href="./images/icons.svg#icon-twitter"
                   ></use>
@@ -541,7 +541,7 @@
                 href="https://www.facebook.com/"
                 target="_blank"
               >
-                <svg width="24" height="24">
+                <svg class="footer-icons" width="24" height="24">
                   <use
                     href="./images/icons.svg#icon-facebook"
                   ></use>
@@ -554,7 +554,7 @@
                 href="https://www.linkedin.com/"
                 target="_blank"
               >
-                <svg width="24" height="24">
+                <svg class="footer-icons" width="24" height="24">
                   <use
                     href="./images/icons.svg#icon-linkedin"
                   ></use>
