--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           >
           <ul class="nav-list">
             <li class="nav-item">
-              <a class="nav-link" href="./index.html">Studio</a>
+              <a class="nav-link current" href="./index.html">Studio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="">Portfolio</a>
@@ -75,9 +75,7 @@
             <li class="advantages-list-item">
               <div class="box-background box-icon">
                 <svg class="advantages-icons" width="64" height="64">
-                  <use
-                    href="./images/icons.svg#icon-antenna"
-                  ></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Strategy</h3>
@@ -89,9 +87,7 @@
             <li class="advantages-list-item">
               <div class="box-background box-icon">
                 <svg class="advantages-icons" width="64" height="64">
-                  <use
-                    href="./images/icons.svg#icon-clock"
-                  ></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Punctuality</h3>
@@ -103,9 +99,7 @@
             <li class="advantages-list-item">
               <div class="box-background box-icon">
                 <svg class="advantages-icons" width="64" height="64">
-                  <use
-                    href="./images/icons.svg#icon-diagram"
-                  ></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Diligence</h3>
@@ -117,9 +111,7 @@
             <li class="advantages-list-item">
               <div class="box-background box-icon">
                 <svg class="advantages-icons" width="64" height="64">
-                  <use
-                    href="./images/icons.svg#icon-astronaut"
-                  ></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Technologies</h3>
@@ -158,9 +150,7 @@
                     target="_blank"
                   >
                     <svg class="team-icons" width="16" height="16">
-                      <use
-                        href="./images/icons.svg#icon-instagram"
-                      ></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
@@ -171,9 +161,7 @@
                     target="_blank"
                   >
                     <svg class="team-icons" width="16" height="16">
-                      <use
-                        href="./images/icons.svg#icon-twitter"
-                      ></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
@@ -184,9 +172,7 @@
                     target="_blank"
                   >
                     <svg class="team-icons" width="16" height="16">
-                      <use
-                        href="./images/icons.svg#icon-facebook"
-                      ></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
@@ -197,9 +183,7 @@
                     target="_blank"
                   >
                     <svg class="team-icons" width="16" height="16">
-                      <use
-                        href="./images/icons.svg#icon-linkedin"
-                      ></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -225,9 +209,7 @@
                     target="_blank"
                   >
                     <svg class="team-icons" width="16" height="16">
-                      <use
-                        href="./images/icons.svg#icon-instagram"
-                      ></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
@@ -238,9 +220,7 @@
                     target="_blank"
                   >
                     <svg class="team-icons" width="16" height="16">
-                      <use
-                        href="./images/icons.svg#icon-twitter"
-                      ></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
@@ -251,9 +231,7 @@
                     target="_blank"
                   >
                     <svg class="team-icons" width="16" height="16">
-                      <use
-                        href="./images/icons.svg#icon-facebook"
-                      ></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
@@ -264,9 +242,7 @@
                     target="_blank"
                   >
                     <svg class="team-icons" width="16" height="16">
-                      <use
-                        href="./images/icons.svg#icon-linkedin"
-                      ></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -292,9 +268,7 @@
                     target="_blank"
                   >
                     <svg class="team-icons" width="16" height="16">
-                      <use
-                        href="./images/icons.svg#icon-instagram"
-                      ></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
@@ -305,9 +279,7 @@
                     target="_blank"
                   >
                     <svg class="team-icons" width="16" height="16">
-                      <use
-                        href="./images/icons.svg#icon-twitter"
-                      ></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
@@ -318,9 +290,7 @@
                     target="_blank"
                   >
                     <svg class="team-icons" width="16" height="16">
-                      <use
-                        href="./images/icons.svg#icon-facebook"
-                      ></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
@@ -331,9 +301,7 @@
                     target="_blank"
                   >
                     <svg class="team-icons" width="16" height="16">
-                      <use
-                        href="./images/icons.svg#icon-linkedin"
-                      ></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -359,9 +327,7 @@
                     target="_blank"
                   >
                     <svg class="team-icons" width="16" height="16">
-                      <use
-                        href="./images/icons.svg#icon-instagram"
-                      ></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
@@ -372,9 +338,7 @@
                     target="_blank"
                   >
                     <svg class="team-icons" width="16" height="16">
-                      <use
-                        href="./images/icons.svg#icon-twitter"
-                      ></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
@@ -385,9 +349,7 @@
                     target="_blank"
                   >
                     <svg class="team-icons" width="16" height="16">
-                      <use
-                        href="./images/icons.svg#icon-facebook"
-                      ></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
@@ -398,9 +360,7 @@
                     target="_blank"
                   >
                     <svg class="team-icons" width="16" height="16">
-                      <use
-                        href="./images/icons.svg#icon-linkedin"
-                      ></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -516,9 +476,7 @@
                 target="_blank"
               >
                 <svg class="footer-icons" width="24" height="24">
-                  <use
-                    href="./images/icons.svg#icon-instagram"
-                  ></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -529,9 +487,7 @@
                 target="_blank"
               >
                 <svg class="footer-icons" width="24" height="24">
-                  <use
-                    href="./images/icons.svg#icon-twitter"
-                  ></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -542,9 +498,7 @@
                 target="_blank"
               >
                 <svg class="footer-icons" width="24" height="24">
-                  <use
-                    href="./images/icons.svg#icon-facebook"
-                  ></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -555,9 +509,7 @@
                 target="_blank"
               >
                 <svg class="footer-icons" width="24" height="24">
-                  <use
-                    href="./images/icons.svg#icon-linkedin"
-                  ></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
