--- a/index.html
+++ b/index.html
@@ -377,120 +377,120 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <div class="portfolio-img-wrapper">
+              <div class="overlay-wrapper">
                 <img
                   src="./images/img-portfolio/img1.jpg"
                   alt="banking-app"
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-overlay">
-                  <p class="overlay-text">
+                  <p class="portfolio-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
                   </p>
                 </div>
-              </div>
               <div class="portfolio-list-info">
                 <h3 class="portfolio-list-title">Banking App</h3>
                 <p class="portfolio-list-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
+              <div class="overlay-wrapper">
               <img
                 src="./images/img-portfolio/img2.jpg"
                 alt="cashless-payment"
                 width="360"
                 height="300"
               />
+              <p class="portfolio-text">
+                14 Stylish and User-Friendly App Design Concepts · Task
+                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                App · Cloud Storage App
+              </p>
+            </div>
               <div class="portfolio-list-info">
                 <h3 class="portfolio-list-title">Cashless Payment</h3>
                 <p class="portfolio-list-text">Marketing</p>
               </div>
-              <div class="portfolio-overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
             </li>
             <li class="portfolio-list-item">
+              <div class="overlay-wrapper">
               <img
                 src="./images/img-portfolio/img3.jpg"
                 alt="meditation-app"
                 width="360"
                 height="300"
               />
+              <p class="portfolio-text">
+                14 Stylish and User-Friendly App Design Concepts · Task
+                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                · Cloud Storage App
+              </p>
+            </div>
               <div class="portfolio-list-info">
                 <h3 class="portfolio-list-title">Meditation App</h3>
                 <p class="portfolio-list-text">App</p>
               </div>
-              <div class="portfolio-overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
             </li>
             <li class="portfolio-list-item">
+              <div class="overlay-wrapper">
               <img
                 src="./images/img-portfolio/img4.jpg"
                 alt="taxi-service"
                 width="360"
                 height="300"
               />
+              <p class="portfolio-text">
+                14 Stylish and User-Friendly App Design Concepts · Task
+                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                · Cloud Storage App
+              </p>
+            </div>
               <div class="portfolio-list-info">
                 <h3 class="portfolio-list-title">Taxi Service</h3>
                 <p class="portfolio-list-text">Marketing</p>
-              </div>
-              <div class="portfolio-overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+              </div>   
             </li>
             <li class="portfolio-list-item">
+              <div class="overlay-wrapper">
               <img
                 src="./images/img-portfolio/img5.jpg"
                 alt="screen-illustrations"
                 width="360"
                 height="300"
               />
+              <p class="portfolio-text">
+                14 Stylish and User-Friendly App Design Concepts · Task
+                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                · Cloud Storage App
+              </p>
+            </div>
               <div class="portfolio-list-info">
                 <h3 class="portfolio-list-title">Screen Illustrations</h3>
                 <p class="portfolio-list-text">Design</p>
-              </div>
-              <div class="portfolio-overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+              </div>   
             </li>
             <li class="portfolio-list-item">
+              <div class="overlay-wrapper">
               <img
                 src="./images/img-portfolio/img6.jpg"
                 alt="online-courses"
                 width="360"
                 height="300"
               />
+              <p class="portfolio-text">
+                14 Stylish and User-Friendly App Design Concepts · Task
+                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                · Cloud Storage App
+              </p>
+            </div>
               <div class="portfolio-list-info">
                 <h3 class="portfolio-list-title">Online Courses</h3>
                 <p class="portfolio-list-text">Marketing</p>
               </div>
-              <div class="portfolio-overlay">
-                <p class="overlay-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
-              </div>
+              
+               
             </li>
           </ul>
         </div>
